[metadata]
name = ttyUSBSpy
#version = 0.1
author = kogar; trilobytes; koldo
url = https://gitlab.com/KOLANICH/ttyUSBSpy
description = a tool showing usbmon pcap captures of communications with Prolific pl2303 USB-serial converters.
long_description = file: ReadMe.md
keywords = USB, pl2303, Prolific
license = GPL-3.0
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: OSI Approved
	License :: OSI Approved :: GPL-3.0
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
include_package_data = True
packages = find:
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
install_requires =
	wxwidgets

[options.entry_points]
console_scripts =
	ttyUSBSpy = ttyUSBSpy.__main__:main
